--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -36,8 +36,12 @@
     }
 }
 
+.hv:hover {
+    color: white;
+}
+
 .simpletlink, .currentlink {
-    margin-right: 10px;
+    margin-right: 30px;
     font-weight: 500;
     margin-top: 50px;
     padding-bottom: 30px;
