--- a/src/components/OrdersList/OrderCard/OrderCard.module.css
+++ b/src/components/OrdersList/OrderCard/OrderCard.module.css
@@ -1,11 +1,14 @@
-.ordercardwrapper {
+.order_card_wrapper {
   margin-bottom: 16px;
 }
-.ordercardwrapper:hover {
+.order_card_wrapper:hover {
   box-shadow: 0px 0px 25px 0px #66676f26;
   transition: all 0.2s;
 }
-.headerlink:hover {
+.header_link{
+  text-decoration: underline;
+}
+.header_link:hover {
   cursor: pointer;
   color: white;
 }
