--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,13 +10,13 @@
   padding-top: var(--mantine-spacing-xl);
   padding-bottom: var(--mantine-spacing-xl);
 
-  @media (max-width: mantine-breakpoint-xs) {
+  @media (max-width: 600px) {
     flex-direction: column;
   }
 }
 
 .links {
-  @media (max-width: mantine-breakpoint-xs) {
+  @media (max-width: 600px) {
     margin-top: var(--mantine-spacing-md);
   }
 }
