--- a/src/components/CustomSegmentedControl/CustomSegmentedControl.module.css
+++ b/src/components/CustomSegmentedControl/CustomSegmentedControl.module.css
@@ -4,14 +4,14 @@
   border: 1px solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-4));
 }
 
-.indicator {
-  /* background-image: linear-gradient(
-    to right,
-    var(--mantine-color-pink-filled),
-    var(--mantine-color-orange-filled)
-  ); */
-  background-color: rgb(165, 188, 184); /* rgb(25,113,194) */
-}
+/*.indicator {*/
+/*  !* background-image: linear-gradient(*/
+/*    to right,*/
+/*    var(--mantine-color-pink-filled),*/
+/*    var(--mantine-color-orange-filled)*/
+/*  ); *!*/
+/*  background-color: rgb(165, 188, 184); !* rgb(25,113,194) *!*/
+/*}*/
 
 .control {
   &::before {
