--- a/src/components/OrdersList/OrderCard/OrderCard.module.css
+++ b/src/components/OrdersList/OrderCard/OrderCard.module.css
@@ -1,7 +1,7 @@
 .order_card_wrapper {
   margin-bottom: 16px;
 }
-.order_card_wrapper:hover {
+.order_card_wrapper_hv:hover {
   box-shadow: 0px 0px 25px 0px #66676f26;
   transition: all 0.2s;
 }
